# cvtools

./: README.md  cvutils.py  pyproject.toml  requirements.txt
base/dataset/: classification_dataset.py  dataset.py
datasets/: __init__.py
datasets/base/cxr/: __init__.py  cxr.py
datasets/base/sun/: __init__.py  sun.py
datasets/pytorch/classification/: classification_dataset_pt.py
datasets/pytorch/sun/: sun_pt.py
datasets/tensorflow/classification/: classification_dataset_tf.py
decomposition/: pca.py
image/: __init__.py  io.py  processing.py
pytorch/dataset/: classification_dataset_pt.py  dataset.py
src/cvtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cvtools/datasets/base/: __init__.py
src/cvtools/datasets/classification/: __init__.py  pytorch.py  tensorflow.py
src/cvtools/datasets/pytorch/: __init__.py
src/cvtools/datasets/tensorflow/: __init__.py
src/cvtools/decomposition/: pca.py
src/cvtools/evaluation/: __init__.py  classification.py  clustering.py
src/cvtools/evaluation/metrics/: __init__.py  classification.py  clustering.py
src/cvtools/image/: __init__.py  io.py  processing.py  pytorch.py
src/cvtools/layers/pytorch/: __init__.py  center_dependent_pool.py  (+8 more)
src/cvtools/metrics/: __init__.py  classification.py  clustering.py
src/cvtools/utils/: __init__.py  array.py  random.py
src/cvtools/visualization/: __init__.py  classification.py  clustering.py  features.py  pca.py  utils.py  visualization.py
tensorflow/dataset/: __init__.py  classification_dataset_tf.py  dataset.py
utils/: __init__.py  importutils.py
(+55 files in other folders)
